--- a/views/battle.haml
+++ b/views/battle.haml
@@ -1,4 +1,12 @@
 #battle
+  - if @haikus.length < 3
+    .row
+      .span11.offset1
+        %h1 We don't have enough haikus yet!
+        %h2 
+          Why don't you
+          %a{ :href => "/haiku" } write one
+          to help us get started?
   .row
     .span4.offset1
       = haml :haiku, :locals => { :haiku => @haikus.first }
