--- a/views/battle.haml
+++ b/views/battle.haml
@@ -7,16 +7,17 @@
           Why don't you
           %a{ :href => "/haiku" } write one
           to help us get started?
-  .row
-    .span4.offset1
-      = haml :haiku, :locals => { :haiku => @haikus.first }
-    .span1.vs
-      .outer
-        .middle
-          .inner
-            .inner-content vs.
-    .span4
-      = haml :haiku, :locals => { :haiku => @haikus.second }
+  - if @haikus >= 2
+    .row
+      .span4.offset1
+        = haml :haiku, :locals => { :haiku => @haikus.first }
+      .span1.vs
+        .outer
+          .middle
+            .inner
+              .inner-content vs.
+      .span4
+        = haml :haiku, :locals => { :haiku => @haikus.second }
 
 %form#battle-report{ :method => 'post', :action => 'battle' }
   %input{ :type => 'hidden', :name => 'win'}
