--- a/views/haiku.haml
+++ b/views/haiku.haml
@@ -1,3 +1,4 @@
 .haiku{ 'data-id' => haiku.id }
   - haiku.lines.each do |line|
     .line= line
+  %a.permalink{ :href => "/haiku/#{haiku.id}" } permalink
