haiku are now html escapedw

--- a/views/haiku.haml
+++ b/views/haiku.haml
@@ -1,4 +1,5 @@
 .haiku{ 'data-id' => haiku.id }
   - haiku.lines.each do |line|
-    .line= line
+    .line
+      &= line
   %a.permalink{ :href => "/haiku/#{haiku.id}" } permalink
