changed permalinks to new url

--- a/views/haiku.haml
+++ b/views/haiku.haml
@@ -4,4 +4,4 @@
       &= line
   .links
     %a.permalink{ :href => "/haiku/#{haiku.id}" } 
-      = "haikuclash.herokuapp.com/haiku/#{haiku.id}"
+      = "haikuclash.com/haiku/#{haiku.id}"
